--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: 
 metadata:
   name: zookeeper
 spec:
@@ -17,7 +17,7 @@ spec:
         image: zookeeper
         resources:
           limits:
-            memory: "128Mi"
+            memory: "1Gi"
             cpu: "500m"
         ports:
         - containerPort: 2181
@@ -45,7 +45,7 @@ spec:
         image: ubuntu/kafka
         resources:
           limits:
-            memory: "128Mi"
+            memory: "Gi"
             cpu: "500m"
         ports:
         - containerPort: 9092
