--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -27,10 +27,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: cd producer
-    - run: npm build
+    - run: npm install
     - run: cd ..
     - run: cd consumer
-    - run: npm build
+    - run: npm install
     - run: npm run test
     - run: cd ..
     - run: cd producer
