--- a/consumer/package.json
+++ b/consumer/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "kafkajs": "^2.2.3",
     "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
   }
 }
